# ifguard

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
iptop_json/: cli.py  sniffer.py
tests/: test_sniffer.py
